syntax = "proto3";

package com.fastcampus.nextplaybackservice.domain.service;

service PlaybackService {
  rpc StartRecord(StartRecordRequest) returns (StartRecordResponse);
  rpc EndRecord(EndRecordRequest) returns (EndRecordResponse);
  rpc LogEvent(LogEventRequest) returns (LogEventResponse);
}

message PlaybackRecord {
  int64 record_id = 1;  // 재생 기록 ID
  int64 user_id = 2;    // 사용자 ID
  int64 file_id = 3;    // 파일 ID
  int64 start_time = 4;  // 시작 시간 (UNIX 타임스탬프)
  int64 end_time = 5;    // 종료 시간 (UNIX 타임스탬프)
}

message EventLog {
  int64 event_id = 1;     // 이벤트 ID
  int64 record_id = 2;   // 관련 재생 세션 ID
  int64 user_id = 3;      // 사용자 ID
  string event_type = 4;   // 이벤트 유형 (예: 'play', 'pause', 'stop')
  int64 timestamp = 5;     // 이벤트 발생 시간 (UNIX 타임스탬프)
}

// 재생 기록 시작 요청 메시지
message StartRecordRequest {
  int64 user_id = 1;      // 사용자 ID
  int64 file_id = 2;      // 파일 ID
}

// 재생 기록 시작 응답 메시지
message StartRecordResponse {
  PlaybackRecord record = 1; // 시작된 재생 기록 정보
}

// 재생 기록 종료 요청 메시지
message EndRecordRequest {
  int64 record_id = 1;   // 재생 기록 ID
}

// 재생 기록 종료 응답 메시지
message EndRecordResponse {
  PlaybackRecord record = 1; // 종료된 재생 기록 정보
}

// 이벤트 로깅 요청 메시지
message LogEventRequest {
  EventLog event = 1;      // 로깅할 이벤트
}

// 이벤트 로깅 응답 메시지
message LogEventResponse {
  EventLog event = 1;      // 로깅된 이벤트 정보
}